Fix: the scrollbars would create a dark border event when not in use.

--- a/ui/src/Layout.css
+++ b/ui/src/Layout.css
@@ -20,7 +20,7 @@ a.active {
   background-color: #282c34;
   height: 100vh;
   color: #f3f3f1;
-  overflow: scroll;
+  overflow: auto;
   padding-left:30px;
   padding-right:30px;
 }
